--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,9 @@
             background-color: #f44336; /* Red */
         }
     </style>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+ 
 </head>
 <body>
 
@@ -67,15 +70,11 @@
             <td>{{.Description}}</td>
             <td>{{.Completed}}</td>
             <td>{{.DayCount}}</td>
-            <td>
-                <form action="/edit-task" method="post" style="display:inline;">
-                    <input type="hidden" name="task-number" value="1">
-                    <input type="submit" class="button edit-button" value="Edit">
-                </form>
-                <form action="/delete-task" method="post" style="display:inline;">
+            <td> <a class="btn btn-danger" href="/delete/{{.TaskNumber}}">DELETE</a>
+                <!-- <form action="/delete-task" method="post" style="display:inline;">
                     <input type="hidden" name="task-number" value="1">
                     <input type="submit" class="button delete-button" value="Delete">
-                </form>
+                </form> -->
             </td>
         </tr>
         {{else}}
