--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
             background-color: #f44336; /* Red */
         }
     </style>
+    <link rel="icon" href="https://media.istockphoto.com/id/903719860/vector/to-do-list.jpg?s=612x612&w=0&k=20&c=epjdgYi3z-dc9M6GoUYX8dGfKFYsAqQJHqSnjOGkDO4=" type="image/x-icon">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
  
